--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -8,7 +8,7 @@
           width: 1240px;
           width: 86%;
           height: 223px;
-          left: 100px;
+          left: 7%;
           top: 152px;
           background-size: cover;
           overflow: hidden;
@@ -34,22 +34,68 @@
      
         
 }
-
-
-@media screen and  (min-width: 1441px) and (max-width: 2560px) {
+@media screen and  (min-width: 2561px)  {
      .kasa-apropos{
           
           .kasa-apropos_section1{
-              left: 6%;
+              left: 9%;
+              width: 80%;
+          }
+     }
+}     
+
+@media screen and  (min-width: 1500px) and (max-width: 2560px) {
+     .kasa-apropos{
+          
+          .kasa-apropos_section1{
+              left: 9%;
               width: 80%;
           }
      }
 }
-
+@media screen and (min-width:1025px) and (max-width:1400px){ 
+     .kasa-apropos{
+          @include pageLengthdesktop();
+          margin-bottom: 320px;
+          
+          .kasa-apropos_section1{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 223px;
+               left: 100px;
+               left: 6%;
+               top: 126px;
+               background-size: cover;
+               overflow: hidden;
+               background: #1e1c1c3d;
+               mix-blend-mode: darken;
+               border-radius: 25px;
+        
+               .sectionimagekalen{
+                    position: absolute;
+                    width: 1240px;
+                    //width: 100%;
+                    height: 827px;
+                    //left: 100px;
+                    //top: -150px;
+                    width: 100%;
+                    mix-blend-mode: darken;
+                    border-radius: 25px;
+                    transform: translate(1px, -310px);
+               }
+               .sectionimagegustavo{
+                    display: none;
+               }
+          }
+          
+             
+     }
+}     
 @media screen and (min-width: 769px) and (max-width:1024px){ 
      .kasa-apropos{
           @include pageLengthdesktop();
-          margin-bottom: 300px;
+          margin-bottom: 390px;
           
           .kasa-apropos_section1{
                position: absolute;
@@ -89,7 +135,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 10%;
+          margin-bottom: 40%;
          
           .kasa-apropos_section1{
                position: absolute;
@@ -169,7 +215,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 10%;
+          margin-bottom: 20%;
          
           .kasa-apropos_section1{
                position: absolute;
@@ -211,7 +257,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 10%;
+          margin-bottom: 24%;
          
           .kasa-apropos_section1{
                position: absolute;
