--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -112,6 +112,103 @@
     color:  #FF6060;
   }
 }
+@media screen and  (min-width: 2561px) {
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    
+    //background: url(accomodation-1-3.jpg);
+    mix-blend-mode: normal;
+    border-radius: 25px;
+     
+     
+  }
+  
+  .carousel-arrow-container img {
+       width: 109%;
+       //max-width: 1240px;
+       max-width: unset;
+       height: 415px;
+       border-radius: 25px;
+       object-fit: cover;
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root {
+       position: absolute;
+       cursor: pointer;
+       height: 79px;
+       width: 46px;
+       top: 30%;
+       transform: translateY(-50%);
+       z-index: 1;
+       color: white;
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root:first-child {
+       left: 0;
+       margin-left: 15px;
+       
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root:last-child {
+       right: 0;
+      
+       }
+   
+  .Carousel-title-location{
+    h1{
+      position: absolute;
+      //position: absolute;
+      width: 800px;
+      height: 77px;
+      //left: 100px;
+      //top: 573px;
+      //left: 6.94%;
+      left: -0.06%;
+      right: 48.96%;
+      //top: 55.96%;
+      //bottom: 39.06%;
+      //bottom: 24.06%;
+      top: 63.96%;
+      bottom: 24.06%;
+       
+      @include  policeStyle1();
+      font-size: 36px;
+     
+      /* or 51px */
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      position: absolute;
+      //left: 6.94%;
+      left: -0.06%;
+      right: 80.83%;
+      //top: 60.94%;
+      //bottom: 36.52%;
+      //bottom: 20.52%;
+      top: 57.94%;
+      bottom: 19.52%;
+   
+      @include  policeStyle1();
+      font-size: 18px;
+      
+      /* identical to box height, or 26px */
+    
+      display: flex;
+      align-items: flex-end;
+    
+      color:  #FF6060;
+    }
+  }
+}  
 @media screen and  (min-width: 1441px) and (max-width: 2560px) {
   .carousel-container {
     position: absolute;
@@ -241,6 +338,7 @@
        transform: translateY(-50%);
        z-index: 1;
        color: white;
+       left:95%;
        }
        
        .carousel-arrow-container .MuiSvgIcon-root:first-child {
@@ -268,7 +366,7 @@
       //top: 55.96%;
       //bottom: 39.06%;
       //bottom: 24.06%;
-      top: 63.96%;
+      top: 61.96%;
       bottom: 24.06%;
        
       @include  policeStyle1();
@@ -346,6 +444,7 @@
       transform: translateY(-50%);
       z-index: 1;
       color: white;
+      left:93%;
       }
       
       .carousel-arrow-container .MuiSvgIcon-root:first-child {
@@ -421,7 +520,24 @@
     top: 0px;
     border-radius: 10px;
     width: 100%;
-   
+    .image-counter{
+      position: absolute;
+      left: 48.95%;
+      right: 49.11%;
+      top: -68.81%;
+      bottom: 2.01%;
+  
+      @include  policeStyle1();
+      font-size: 18px;
+      line-height: 142.6%;
+      /* or 26px */
+  
+      display: flex;
+      align-items: flex-end;
+      text-align: center;
+  
+      color: #FFFFFF;
+    }
     
     
   }
@@ -444,6 +560,7 @@
       transform: translateY(-50%);
       z-index: 1;
       color: white;
+      left:90%;
       }
       
       .carousel-arrow-container .MuiSvgIcon-root:first-child {
@@ -521,7 +638,24 @@
     top: 0px;
     border-radius: 10px;
     width: 100%;
-   
+    .image-counter{
+      position: absolute;
+      left: 48.95%;
+      right: 49.11%;
+      top: -68.81%;
+      bottom: 2.01%;
+  
+      @include  policeStyle1();
+      font-size: 18px;
+      line-height: 142.6%;
+      /* or 26px */
+  
+      display: flex;
+      align-items: flex-end;
+      text-align: center;
+  
+      color: #FFFFFF;
+    }
     
     
   }
@@ -544,6 +678,7 @@
       transform: translateY(-50%);
       z-index: 1;
       color: white;
+      left:87%;
       }
       
       .carousel-arrow-container .MuiSvgIcon-root:first-child {
@@ -618,7 +753,24 @@
     left: 0px;
     top: 0px;
     border-radius: 10px;
-
+    .image-counter{
+      position: absolute;
+      left: 48.95%;
+      right: 49.11%;
+      top: -68.81%;
+      bottom: 2.01%;
+  
+      @include  policeStyle1();
+      font-size: 18px;
+      line-height: 142.6%;
+      /* or 26px */
+  
+      display: flex;
+      align-items: flex-end;
+      text-align: center;
+  
+      color: #FFFFFF;
+    }
    
     
     
@@ -642,6 +794,7 @@
       transform: translateY(-50%);
       z-index: 1;
       color: white;
+      left:88%;
       }
       
       .carousel-arrow-container .MuiSvgIcon-root:first-child {
