--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -8,6 +8,7 @@
   width: 71%;
   height: 47px;
   left: 208px;
+  left:15%;
   top: 406px;
 
 
@@ -117,8 +118,7 @@
     //top:776px;
     top: 454px;
   }
-  
-  @media screen and (min-width: 769px) and (max-width:1024px){ 
+  @media screen and (min-width:1025px) and (max-width:1400px){ 
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -155,9 +155,7 @@
       h3 {
         margin: 0;
         @include  policeStyle1();
-        font-size: 24px;
-       
-        
+        font-size: 22px;
         display: flex;
         align-items: center;
         color: #FFFFFF; 
@@ -168,7 +166,7 @@
         color: #FFFFFF;
         display: inline-block;
         position: absolute;         
-        left: 93.75%;
+        left: 91.75%;
         right: 18.63%;
         width: 66px;
         height: 36px;
@@ -199,7 +197,7 @@
           margin: 0;
           @include  policeStyle1();
           font-weight: 400;
-          font-size: 24px;
+          font-size: 22px;
           color: #FF6060;
         }
       
@@ -241,6 +239,134 @@
     }
     
   }  
+  @media screen and (min-width: 769px) and (max-width:1024px){ 
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 1023px;
+    width: 82%;
+    height: 47px;
+    left: 208px;
+    left: 10%;
+    top: 380px;
+  
+  
+   .collapse-container {
+      margin-bottom: 20px;
+     
+  
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+  
+    .collapse-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #FF6060;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 1023px;
+      width: 920px;
+      width: 100%;
+      height: 47px;
+  
+      h3 {
+        margin: 0;
+        @include  policeStyle1();
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        color: #FFFFFF; 
+      }
+  
+      & .collapse-icon {
+        transition: transform 0.3s ease-in-out;
+        color: #FFFFFF;
+        display: inline-block;
+        position: absolute;         
+        left: 91.75%;
+        right: 18.63%;
+        width: 66px;
+        height: 36px;
+  
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  
+    .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+    }
+  
+    .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      padding: 20px;
+      background: #F7F7F7;
+      border-radius: 5px;
+      width: 1023px;
+      width: 920px;
+      width: 100%;
+      //width: 71%;
+       & p{
+          margin: 0;
+          @include  policeStyle1();
+          font-weight: 400;
+          font-size: 20px;
+          color: #FF6060;
+        }
+      
+    }
+  
+    .collapse-0 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      top:406px;
+    }
+  
+    .collapse-1 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:484px;
+      top: 422px;
+    }
+  
+    .collapse-2 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 439px;
+    }
+  
+    .collapse-3 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:776px;
+      top: 454px;
+    }
+    
+  }
+  @media screen and  (min-width: 1500px) and (max-width: 2560px) {
+
+    .kasa-apropos_collapse {
+      left: 14%;
+      
+    }
+  }  
   @media screen and (min-width: 426px) and (max-width:768px){
     @include collapse-aproposM();
     width: 90%;
@@ -271,7 +397,7 @@
       h3 {
         margin: 0;
         @include  policeStyle1();
-        font-size: 13px;
+        font-size: 15px;
       
     
         display: flex;
@@ -282,9 +408,9 @@
       & .collapse-icon {
         display: inline-block;
         position: absolute;         
-        left: 90%;
+        left: 92%;
         right: 18.63%;
-        width: 66px;
+        width: 7%;
         height: 30px;
         color: #FFFFFF;
         transition: transform 0.3s ease;
@@ -314,7 +440,7 @@
         margin: 0;
         @include  policeStyle1();
         font-weight: 400;
-        font-size: 12px;
+        font-size: 15px;
       
         //width: 71%;
         color: #FF6060;
@@ -485,7 +611,7 @@
   @media screen and (min-width: 321px)and (max-width:375px){
     @include collapse-aproposM();
     width: 90%;
-    top: 340px;
+    top: 330px;
  
     .collapse-container {
       margin-bottom: 20px;
@@ -505,6 +631,7 @@
       border-radius: 5px;
       cursor: pointer;
       Width:335px;
+      width: 100%;
       Height:30px;
   
       h3 {
@@ -545,6 +672,7 @@
       transition: height 0.3s ease-in-out;
       padding: 20px;
       Width:335px;
+      width: 100%;
       background: #F7F7F7;
       border-radius: 5px;
      //width: 71%;
@@ -604,7 +732,7 @@
     @include collapse-aproposM();
     width: 88%;
     left: 5%;
-    top: 340px;
+    top: 328px;
  
     .collapse-container {
       margin-bottom: 20px;
@@ -724,13 +852,7 @@
 }
 
 
-@media screen and  (min-width: 1441px) and (max-width: 2560px) {
 
-  .kasa-apropos_collapse {
-    left: 10%;
-    
-  }
-}
 
 /* Scss logement collapse ***********************************************************************/
 .logement-collapse {
@@ -1291,7 +1413,7 @@
     /*******/
   
     .collapse-container {
-      width: calc(50% - 38px);
+      width: calc(50% - 3%);
       margin-bottom: 20px;
     }
    
@@ -1393,7 +1515,116 @@
     }  
   }
 }
-
+@media screen and (min-width:2561px){ 
+  .logement-collapse {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /*******/
+  
+    .collapse-container {
+      width: calc(50% - 11%);
+      margin-bottom: 20px;
+    }
+   
+     
+    .collapse-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 10px 20px;
+          
+          padding: 16px;
+          background: #FF6060;
+          border-radius: 10px;
+          cursor: pointer;
+          margin-top: 58px;
+          width: 582px;
+          width: 420px;
+          width: 47%;
+          height: 52px;
+          position: absolute;
+          z-index: 1;
+  
+        h3 {
+          margin: 0;
+          font-size: 18px;
+          @include  policeStyle1();
+          font-size: 18px;
+       
+          display: flex;
+          align-items: center;
+     
+          color: #FFFFFF;
+        }
+  
+          .collapse-icon {
+            transition: transform 0.3s ease-in-out;
+            width: 38px;
+            height: 35px;
+            color: #FFFFFF;
+            position: absolute;
+            left: 91%;
+      
+            &.open {
+              transform: rotate(180deg);
+            }
+          }
+    }
+  
+        
+  
+    .collapse-content-closed {
+          height: 0;
+          overflow: hidden;
+         // transition: height 0.3s ease-in-out;
+          color: #FF6060;
+          font-size: 18px;
+          
+    }
+  
+    .collapse-content {
+          overflow: hidden;
+          transition: height 0.3s ease-in-out;
+          
+          padding: 16px;
+          background: #F7F7F7;
+          line-height: 142.6%;
+          border-radius: 10px;
+          Width:582px;
+          width: 420px;
+          width: 47%;
+          Height:249px;
+          top: 95px;
+          position: absolute;
+          
+    
+          p {
+            margin: 0;
+            @include  policeStyle1();
+            font-weight: 400;
+            color: #FF6060;
+            margin-top: 18px;
+            
+          }
+    
+          ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            line-height: 142.6%;
+            margin-top: 18px;
+            li {
+              margin-bottom: 8px;
+              @include  policeStyle1();
+              font-weight: 400;
+              font-size: 18px;
+              color: #FF6060;
+            }
+          }
+    }  
+  }
+}
 
 
 
