--- a/src/styles/_hostrate.scss
+++ b/src/styles/_hostrate.scss
@@ -435,15 +435,15 @@
          
           position: absolute;
           width: 135.5px;
-          width: 19%;
+          width: 18%;
           height: 33px;
-          left: 89%;
+          left: 86%;
    
           .HostRate-host-name {
                position: absolute;
                width: 61px;
                height: 54px;
-               left: -19%;
+               left: -25%;
                top: 358px;
                          
                @include  policeStyle1();
@@ -461,7 +461,7 @@
                width: 44px;
                height: 44px;
                left: 289px;
-               left: 28%;
+               left: 34%;
                top: 369px;
               
                //background: #C4C4C4;
@@ -476,6 +476,195 @@
      
 }     
 @media screen and (min-width: 901px) and (max-width:1024px){ 
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left: 77%;
+          //top: 652px;
+          top: 518px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               left: 80%;
+               top: 652px;
+     }
+     .HostRate-host{
+         
+          .HostRate-host-name {
+               position: absolute;
+               width: 73px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 82%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 92%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+     
+}
+@media screen and (min-width:1201px) and (max-width:1400px){ 
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left: 82%;
+          //top: 652px;
+          top: 518px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               left: 80%;
+               top: 652px;
+     }
+     .HostRate-host{
+         
+          .HostRate-host-name {
+               position: absolute;
+               width: 73px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 84%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 93%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+     
+}
+@media screen and (min-width:1126px) and (max-width:1200px){ 
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left: 82%;
+          //top: 652px;
+          top: 518px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               left: 80%;
+               top: 652px;
+     }
+     .HostRate-host{
+         
+          .HostRate-host-name {
+               position: absolute;
+               width: 73px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 84%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 93%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+     
+}
+@media screen and (min-width:1025px) and (max-width:1125px){ 
      .HostRate-rate{
           position: absolute;
           width: 196px;
@@ -538,7 +727,7 @@
      }
      
 }
-@media screen and  (min-width: 1441px) and (max-width: 2560px) {
+@media screen and  (min-width: 2261px) and (max-width: 2560px) {
      .HostRate-rate{
           position: absolute;
           width: 196px;
@@ -599,4 +788,187 @@
           }
      }
 }     
+@media screen and  (min-width: 2001px) and (max-width: 2260px) {
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left:83%;
+          //top: 652px;
+          top: 518px;
+          z-index: auto;
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          
+          .HostRate-host-name {
+               position: absolute;
+               width: 78px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 83%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 88%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}     
+@media screen and  (min-width: 1441px) and (max-width: 2000px) {
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left:78%;
+          //top: 652px;
+          top: 518px;
+          z-index: auto;
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          
+          .HostRate-host-name {
+               position: absolute;
+               width: 78px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 78%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 86%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+} 
+@media screen and  (min-width:2561px) {
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left:91%;
+          //top: 652px;
+          top: 518px;
+          z-index: auto;
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          
+          .HostRate-host-name {
+               position: absolute;
+               width: 78px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 92%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 97%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}         
 
