--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -37,23 +37,49 @@
 
      }
 }
+@media screen and  (min-width: 2561px) {
+     .kasa-logement {
+          @include pageLengthdesktop();
+          width: 100%;
+          .kasa-logement_body{
+               position: absolute;
+               width: 1240px;
+               width: 82%;
+               height: 643px;
+               left: 7%;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 2%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+               width: 90%;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 2%;
+               top: 532px;
+     
+          }
+     }
+     
+}     
 
-@media screen and  (min-width: 1600px) and (max-width: 2000px){
-     .kasa-logement { 
-          .kasa-logement_body{
-          left: 13%;
-          }
-     }
-     
- }
-@media screen and  (min-width: 2001px){
-     .kasa-logement { 
-          .kasa-logement_body{
-          left: 15%;
-          }
-     }
-     
- } 
  @media screen and  (min-width: 1441px) and (max-width: 2560px) {
      .kasa-logement {
           @include pageLengthdesktop();
@@ -63,7 +89,7 @@
                width: 1240px;
                width: 90%;
                height: 643px;
-               left: 100px;
+               left: 7%;
                top: 128px;
      
           }
@@ -96,6 +122,46 @@
      }
      
  }
+ @media screen and (min-width:1025px) and (max-width:1400px){ 
+     .kasa-logement {
+          @include pageLengthdesktop();
+          .kasa-logement_body{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 643px;
+               left: 100px;
+               left: 6%;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 0%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 100%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 0px;
+               top: 532px;
+     
+          }
+     } 
+} 
 @media screen and (min-width: 901px) and (max-width:1024px){ 
      .kasa-logement {
           @include pageLengthdesktop();
