--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -58,35 +58,18 @@
     
           display: flex;
           flex-wrap: wrap;
-          justify-content: space-between;
-          height: 780px;
-          max-width: 1400px;
-          width: 100%;
-          border-radius: 25px;
-          padding-top: 56px;
-          padding-left: 11%;
-          margin-left: 10%;
-     }
-}     
-@media screen and (min-width: 2001px) and (max-width:2560px){
-     .kasa-home-thumb{
-    
-          display: flex;
-          flex-wrap: wrap;
           justify-content: space-around;
           height: 780px;
-          max-width: 1400px;
+          max-width: 2000px;
           width: 100%;
           border-radius: 25px;
           padding-top: 56px;
-          padding-left: 11%;
-          margin-left: 10%;
-          
-          
+          padding: 3%;
+          margin-left: 6%;
           .rectangle2{ 
                position: relative;
-               height: 340px;
-               max-width: 340px;
+               height: 400px;
+               max-width: 400px;
                       
                border-radius: 10px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -108,7 +91,111 @@
                     width: 300px;
                     width: 100%;
                     @include  policeStyle1();
-                    font-size: 18px;
+                    font-size: 20px;
+                    margin-top: -62px;
+                    margin-left: 5%;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                    display: flex;
+                    align-items: flex-end;
+                    color: #FFFFFF;
+               }     
+          }
+     }
+}
+@media screen and (min-width: 2201px) and (max-width:2560px){
+     .kasa-home-thumb{
+    
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-around;
+          height: 780px;
+          max-width: 1844px;
+          width: 100%;
+          border-radius: 25px;
+          padding-top: 56px;
+          padding: 3%;
+      
+          
+          
+          .rectangle2{ 
+               position: relative;
+               height: 400px;
+               max-width: 400px;
+                      
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               text-align:left; 
+               overflow: hidden;
+              
+               img{
+                  display: block;
+                   border-radius: 10px;
+                   width: 100%;
+                   height: 100%;
+                   // height: auto;
+          
+               }     
+               
+               h2{
+                    position: absolute;
+                    height: 52px;
+                    width: 300px;
+                    width: 100%;
+                    @include  policeStyle1();
+                    font-size: 20px;
+                    margin-top: -62px;
+                    margin-left: 5%;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                    display: flex;
+                    align-items: flex-end;
+                    color: #FFFFFF;
+               }     
+          }
+     }
+}          
+@media screen and (min-width: 2001px) and (max-width:2200px){
+     .kasa-home-thumb{
+    
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-around;
+          height: 780px;
+          max-width: 1844px;
+          width: 100%;
+          border-radius: 25px;
+          padding-top: 56px;
+          padding: 3%;
+       
+          
+          
+          .rectangle2{ 
+               position: relative;
+               height: 400px;
+               max-width: 400px;
+                      
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               text-align:left; 
+               overflow: hidden;
+              
+               img{
+                  display: block;
+                   border-radius: 10px;
+                   width: 100%;
+                   height: 100%;
+                   // height: auto;
+          
+               }     
+               
+               h2{
+                    position: absolute;
+                    height: 52px;
+                    width: 300px;
+                    width: 100%;
+                    @include  policeStyle1();
+                    font-size: 20px;
                     margin-top: -62px;
                     margin-left: 5%;
                     margin-bottom: 20px;
