--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -75,7 +75,20 @@
           }
      }    
 }
-
+@media screen and  (min-width: 2561px) {
+     .kasa-home{
+      width: 95%;
+      margin-bottom: 2550px;
+           &_body {
+               left: 9%;
+               
+               .kasa-home-body_gallery{
+                    height: 3095px;
+               
+               }
+          }
+      }
+ }
 @media screen and  (min-width: 2201px) and (max-width: 2560px) {
      .kasa-home{
       width: 95%;
