--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -484,8 +484,7 @@
       flex-direction: column;
       margin-bottom: 20px;
       position: relative;
-      //top:776px;
-      //top: 348px;
+      
     }
   }  
   @media screen and (min-width: 376px) and (max-width:425px){
@@ -604,8 +603,7 @@
       flex-direction: column;
       margin-bottom: 20px;
       position: relative;
-      //top:776px;
-      //top: 348px;
+      
     }
   }  
   @media screen and (min-width: 321px)and (max-width:375px){
@@ -724,8 +722,7 @@
       flex-direction: column;
       margin-bottom: 20px;
       position: relative;
-      //top:776px;
-      //top: 348px;
+      
     }
   }
   @media screen and (max-width: 320px){
@@ -845,8 +842,7 @@
       flex-direction: column;
       margin-bottom: 20px;
       position: relative;
-      //top:776px;
-      //top: 348px;
+     
     }
   }  
 }
@@ -1496,6 +1492,7 @@
             color: #FF6060;
             margin-top: 18px;
             
+            
           }
     
           ul {
@@ -1605,7 +1602,7 @@
             font-weight: 400;
             color: #FF6060;
             margin-top: 18px;
-            
+            font-size: 18px;
           }
     
           ul {
