--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -136,7 +136,7 @@
                width: 90%;
                height: 1095px;
                left: 6%;
-               top: 111px;
+               top: 122px;
      
                .kasa-home-body_section1{
                     position: absolute;
@@ -288,7 +288,7 @@
                width: 90%;
                height: 1095px;
                left: 6%;
-               top: 111px;
+               top: 120px;
      
                .kasa-home-body_section1{
                     position: absolute;
@@ -347,7 +347,7 @@
                     
                     left: -3px;
                     top: 220px;
-                    height: 2817px;
+                    height: 3373px;
                     background: #F7F7F7;
                     border-radius: 25px; 
                }
@@ -357,7 +357,7 @@
 @media screen and (min-width: 426px) and (max-width:767px){
      .kasa-home {
           @include pageLengthdesktop();
-          margin-bottom: 6876px;
+          margin-bottom: 4686px;
           &_body {
        
                position: absolute;
@@ -426,7 +426,7 @@
                     left: -3px;
                     top: 156px;
                     height: 7560px;
-                    background: #F7F7F7;
+                    background: #FFFFFF;
                     border-radius: 25px; 
                }
           }    
