--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -65,7 +65,7 @@
           border-radius: 25px;
           padding-top: 56px;
           padding: 3%;
-          margin-left: 6%;
+          margin-left: 3%;
           .rectangle2{ 
                position: relative;
                height: 400px;
@@ -110,7 +110,7 @@
           flex-wrap: wrap;
           justify-content: space-around;
           height: 780px;
-          max-width: 1844px;
+          max-width: 2064px;
           width: 100%;
           border-radius: 25px;
           padding-top: 56px;
@@ -120,8 +120,8 @@
           
           .rectangle2{ 
                position: relative;
-               height: 400px;
-               max-width: 400px;
+               height: 420px;
+               max-width: 420px;
                       
                border-radius: 10px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -428,11 +428,12 @@
           .rectangle2{ 
                position: relative;
                width: 100%;
-               height: 340px;
-               margin-top: 7%;
-               border-radius: 10px;
+               max-width: fit-content;
+               height:auto;
+               margin-top: 2%;
+               border-radius: 25px;
                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-               border-radius: 10px;
+             
                text-align:left; 
 
                h2{
@@ -475,6 +476,7 @@
                position: relative;
                max-width: calc(100%);
               // margin-bottom: 24px;
+              
                height: 255px;
                left: 0px;
                top: 0px;
